<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    tools:context=".HomeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/home_layout"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="#E453AEF6">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/toolbar"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    android:background="#E453AEF6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="Amazon"
                            android:textColor="@color/black"
                            android:textSize="27dp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"/>


                        <ImageView
                            android:id="@+id/home_cart"
                            android:layout_width="47dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="200dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/cart" />

                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>


            </LinearLayout>


            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/image_slider"
                android:layout_marginTop="30dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="2"
                app:sliderStartAutoCycle="true"
                tools:ignore="MissingClass">

            </com.smarteist.autoimageslider.SliderView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="17dp"
                android:text="Deals of the Day"
                android:textSize="23dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:background="@color/white"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:background="@color/white"
                    android:backgroundTint="@color/white">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoes1"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes1"/>

                            <TextView
                                android:id="@+id/oddshoename"
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Revolution 5\nRunning Shoes"
                                android:textColor="@color/black"
                                android:textSize="13dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹3000"
                                android:id="@+id/oddshoeprice"
                                android:textColor="@color/black"
                                android:textSize="23dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoes2"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes2"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Air\nMax Shoes"
                                android:id="@+id/evenshoename"
                                android:textColor="@color/black"
                                android:textSize="13dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹9500"
                                android:id="@+id/evenshoeprice"
                                android:textColor="@color/black"
                                android:textSize="23dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoes3"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Revolution 5\nRunning Shoes"
                                android:textColor="@color/black"
                                android:textSize="13dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹3000"
                                android:textColor="@color/black"
                                android:textSize="23dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoes4"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes2"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Air\nMax Shoes"
                                android:textColor="@color/black"
                                android:textSize="13dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹9500"
                                android:textColor="@color/black"
                                android:textSize="23dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shoes5"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/shoes1"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="42dp"
                                android:text="Nike Revolution \n5 Running Shoes"
                                android:textColor="@color/black"
                                android:textSize="13dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹3000"
                                android:textColor="@color/black"
                                android:textSize="23dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="17dp"
                android:text="Top Products"
                android:textSize="23dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

            <ListView
                android:id="@+id/productslist"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:nestedScrollingEnabled="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewAllProducts"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:text="VIEW ALL"
                android:textSize="18dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>